--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,7 @@
     <color name="off_white">#fffafafa</color>
     <color name="dark_gray">#ffb3b3b3</color>
     <color name="very_dark_gray">#636363</color>
+    <color name="login_tf_group_gray">#AEB0B3</color>
+    <color name="login_tf_background_gray">#E0E1E2</color>
+    <color name="login_button_background">#2A0C0A</color>
 </resources>
