--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,6 @@
     <color name="login_tf_group_gray">#AEB0B3</color>
     <color name="login_tf_background_gray">#E0E1E2</color>
     <color name="login_button_background">#2A0C0A</color>
+    <color name="login_red_text">#F88E80</color>
+    <color name="login_text_edit_background">#E0E1E2</color>
 </resources>
