add drawables for all resolutions and improvements in login UI

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,6 +7,21 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <item name="android:textViewStyle">@style/TwilioTextViewStyle</item>
+        <item name="buttonStyle">@style/TwilioButtonStyle</item>
+        <item name="android:editTextStyle">@style/TwilioEditTextViewStyle</item>
+    </style>
+
+    <style name="TwilioTextViewStyle" parent="android:Widget.TextView">
+        <item name="android:fontFamily">sans-serif-nunito</item>
+    </style>
+
+    <style name="TwilioEditTextViewStyle" parent="android:Widget.EditText">
+        <item name="android:fontFamily">sans-serif-nunito</item>
+    </style>
+
+    <style name="TwilioButtonStyle" parent="android:Widget.Button">
+        <item name="android:fontFamily">sans-serif-avenir</item>
     </style>
 
     <style name="AppTheme.NoActionBar">
@@ -41,15 +56,19 @@
 
     <style name="LoginTextEdit">
         <item name="android:layout_marginRight">7dp</item>
-        <item name="android:layout_height">45dp</item>
+        <item name="android:layout_height">40dp</item>
         <item name="android:background">@color/login_text_edit_background</item>
     </style>
 
     <style name="LoginTextEditImage">
-        <item name="android:layout_height">45dp</item>
+        <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_marginLeft">7dp</item>
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_centerVertical">true</item>
+    </style>
+
+    <style name="LoginTextView">
+        <item name="android:textColor">@android:color/white</item>
     </style>
 
     <style name="AlertDialogCustom" parent="@android:style/Theme.Dialog">
