--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -3,7 +3,14 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/home_bg">
+    android:background="@color/colorPrimaryDark">
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_centerInParent="true"
+        android:scaleType="fitXY"
+        android:src="@drawable/home_bg" />
 
     <ImageView
         android:layout_width="wrap_content"
@@ -14,6 +21,26 @@
         android:layout_marginTop="30dp"
         android:background="@drawable/landing_logo"
         android:contentDescription="@string/logo_text" />
+
+    <TextView
+        style="@style/LoginTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="@string/twilio_first_line"
+        android:id="@+id/textViewLine1"
+        android:layout_below="@+id/imageViewLogo"
+        android:layout_centerHorizontal="true" />
+
+    <TextView
+        style="@style/LoginTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="@string/twilio_second_line"
+        android:id="@+id/textViewLine2"
+        android:layout_below="@+id/textViewLine1"
+        android:layout_centerHorizontal="true" />
 
     <Button
         style="@style/LoginButton"
