Enable password recovery, almost done

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -67,7 +67,7 @@
         <item name="android:layout_centerVertical">true</item>
     </style>
 
-    <style name="LoginTextView">
+    <style name="LoginTextView" parent="LoginElementSideMargin">
         <item name="android:textColor">@android:color/white</item>
     </style>
 
