Initial side menu desing

--- a/app/src/main/res/layout/nav_header_main_chat.xml
+++ b/app/src/main/res/layout/nav_header_main_chat.xml
@@ -1,34 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="@dimen/nav_header_height"
-    android:background="@drawable/side_nav_bar"
-    android:gravity="bottom"
-    android:orientation="vertical"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:background="@android:color/transparent"
     android:theme="@style/ThemeOverlay.AppCompat.Dark">
 
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:paddingTop="@dimen/nav_header_vertical_spacing"
-        android:src="@android:drawable/sym_def_app_icon" />
-
-    <TextView
+    <RelativeLayout
+        android:paddingTop="20dp"
+        android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingTop="@dimen/nav_header_vertical_spacing"
-        android:text="Android Studio"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
+        android:layout_gravity="center_vertical"
+        android:layout_centerVertical="true">
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
+        <ImageView
+            style="@style/MenuHeader"
+            android:id="@+id/imageViewUserIcon"
+            android:layout_width="wrap_content"
+            android:src="@drawable/ic_user"
+            android:gravity="center"
+            android:layout_marginLeft="20dp"/>
+
+        <TextView
+            style="@style/MenuHeader"
+            android:id="@+id/textViewUsername"
+            android:layout_width="wrap_content"
+            android:text="@string/username_placeholder"
+            android:gravity="center"
+            android:layout_marginLeft="10dp"
+            android:textColor="@color/menu_username_color"
+            android:layout_toRightOf="@+id/imageViewUserIcon"
+            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
+
+        <Button
+            style="@style/MenuHeader"
+            android:id="@+id/buttonLogout"
+            android:layout_width="wrap_content"
+            android:background="@android:color/transparent"
+            android:text="@string/logout_text"
+            android:layout_alignParentRight="true"
+            android:layout_marginRight="15dp"
+            android:textColor="@color/twilio_red_text"/>
+    </RelativeLayout>
+    <ImageView
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="android.studio@android.com" />
-
-</LinearLayout>
+        android:layout_alignParentBottom="true"
+        android:background="@drawable/user_panel_line"/>
+</RelativeLayout>
