--- a/app/src/main/res/layout/activity_main_chat.xml
+++ b/app/src/main/res/layout/activity_main_chat.xml
@@ -19,6 +19,7 @@
         android:layout_height="match_parent"
         android:layout_gravity="start"
         android:fitsSystemWindows="true"
+        android:background="@drawable/home_bg"
         app:headerLayout="@layout/nav_header_main_chat"
         app:menu="@menu/activity_main_chat_drawer" />
 
