improve messaging interface

--- a/app/src/main/res/layout/content_main_chat.xml
+++ b/app/src/main/res/layout/content_main_chat.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <ListView
@@ -8,19 +9,14 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:transcriptMode="alwaysScroll"
-        android:layout_above="@+id/divider"
-        android:padding="0dip"
+        android:layout_above="@+id/relSendMessage"
+        android:padding="0dp"
         android:divider="@null"
         android:dividerHeight="0dp"
         android:stackFromBottom="true"
+        android:layout_alignParentTop="true"
         tools:listitem="@layout/message"/>
 
-    <RelativeLayout
-        android:id="@+id/divider"
-        android:layout_width="match_parent"
-        android:layout_height="1dip"
-        android:background="@color/off_white"
-        android:layout_above="@+id/relSendMessage" />
 
     <RelativeLayout
         android:id="@+id/relSendMessage"
