--- a/app/src/main/res/layout/message.xml
+++ b/app/src/main/res/layout/message.xml
@@ -1,24 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<RelativeLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="10dp">
+    android:orientation="vertical"
+    android:padding="5dp">
 
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:padding="12dp">
+        android:paddingLeft="7dp"
+        android:paddingBottom="7dp"
+        android:orientation="horizontal"
+        android:layout_gravity="center">
 
         <TextView
-            android:id="@+id/txtMessage"
-            android:paddingLeft="12dp"
+            android:id="@+id/textViewAuthor"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@android:color/black"
+            android:textColor="@color/message_text_color"
             android:textSize="14sp"
-            android:text="Hello" />
-    </RelativeLayout>
-</RelativeLayout>
+            android:fontFamily="sans-serif-medium"
+            android:text="Author" />
+        <TextView
+            android:id="@+id/textViewDate"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/message_date_color"
+            android:textSize="12sp"
+            android:fontFamily="sans-serif-thin"
+            android:layout_marginLeft="12dp"
+            android:text="Date" />
+    </LinearLayout>
+    <TextView
+        android:id="@+id/textViewMessage"
+        android:paddingLeft="7dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textColor="@color/message_text_color"
+        android:fontFamily="sans-serif-light"
+        android:textSize="14sp"
+        android:text="Hello" />
+</LinearLayout>
